--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "next": "13.3.1",
+    "next-router-mock": "^0.9.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^2.2.1",
